Fix Tests done positioning to better align with original design reference

--- a/src/components/projecteditor/style.less
+++ b/src/components/projecteditor/style.less
@@ -328,7 +328,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    padding-left: 17%;
+    padding-left: 60px;
     justify-content: space-between;
     padding-right: 20px;
     border-bottom: solid 1px #141618 ;
